[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player_Container.gd" type="Script" id=1]
[ext_resource path="res://Camera.gd" type="Script" id=2]
[ext_resource path="res://Levels/Ground1.tres" type="TileSet" id=3]
[ext_resource path="res://Enemies/Enemy_Ground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Collectables/Collectable_Container.gd" type="Script" id=5]
[ext_resource path="res://HUD/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Coins/Coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://Coins/Coin_Container.gd" type="Script" id=8]
[ext_resource path="res://Enemies/Enemy_Container.gd" type="Script" id=9]
[ext_resource path="res://Assets/Final Tilemap.png" type="Texture" id=10]
[ext_resource path="res://Assets/Door.png" type="Texture" id=11]
[ext_resource path="res://Levels/Portal.gd" type="Script" id=12]
[ext_resource path="res://Levels/Spikes.tscn" type="PackedScene" id=13]

[sub_resource type="TileSet" id=1]
0/name = "Final Tilemap.png 0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 576, 192, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Final Tilemap.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 320, 192, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Final Tilemap.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 640, 192, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Final Tilemap.png 3"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 704, 192, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Game" type="Node2D"]

[node name="Background" type="TileMap" parent="."]
collision_layer = 0
collision_mask = 0
format = 1

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
collision_layer = 3
format = 1
tile_data = PoolIntArray( -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -196598, 1, 0, -196597, 1, 0, -196596, 1, 0, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -196588, 1, 0, -196587, 1, 0, -196586, 1, 0, -196585, 1, 0, -196584, 1, 0, -196583, 1, 0, -196582, 1, 0, -196581, 1, 0, -196580, 1, 0, -196579, 1, 0, -196578, 1, 0, -196577, 1, 0, -196576, 1, 0, -196575, 1, 0, -196574, 1, 0, -196573, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -131052, 1, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 1, 0, -131044, 1, 0, -131043, 1, 0, -131042, 1, 0, -131041, 1, 0, -131040, 1, 0, -131039, 1, 0, -131038, 1, 0, -131037, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65557, 1, 0, 65558, 1, 0, 65569, 1, 0, 65570, 1, 0, 65571, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131078, 1, 0, 131079, 1, 0, 131093, 1, 0, 131094, 1, 0, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196614, 1, 0, 196615, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196623, 1, 0, 196624, 1, 0, 196629, 1, 0, 196630, 1, 0, 196642, 1, 0, 196643, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 262178, 1, 0, 262179, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327686, 1, 0, 327687, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327708, 1, 0, 327709, 1, 0, 327710, 1, 0, 327711, 1, 0, 327714, 1, 0, 327715, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393250, 1, 0, 393251, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458767, 1, 0, 458768, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458782, 1, 0, 458786, 1, 0, 458787, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524294, 1, 0, 524295, 1, 0, 524303, 1, 0, 524304, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524318, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589830, 1, 0, 589831, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589839, 1, 0, 589840, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655366, 1, 0, 655367, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655375, 1, 0, 655376, 1, 0, 655393, 1, 0, 655394, 1, 0, 655395, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 851966, 1, 0, 851967, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786463, 1, 0, 786464, 1, 0, 786465, 1, 0, 786466, 1, 0, 786467, 1, 0, 917502, 1, 0, 917503, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 983038, 1, 0, 983039, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 1048574, 1, 0, 1048575, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 1769483, 1, 0 )

[node name="Platform" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 196616, 1, 0, 196617, 1, 0, 458778, 1, 0, 655373, 1, 0, 655374, 1, 0 )

[node name="Spikes" parent="Platform" instance=ExtResource( 13 )]
position = Vector2( 575, 225 )
scale = Vector2( 2, 1 )

[node name="Spikes2" parent="Platform" instance=ExtResource( 13 )]
position = Vector2( 897, 673 )
scale = Vector2( 2, 1 )

[node name="Spikes3" parent="Platform" instance=ExtResource( 13 )]
position = Vector2( 1695, 481 )

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Enemy_Container" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Enemy_Ground" parent="Enemy_Container" instance=ExtResource( 4 )]
position = Vector2( 1789, 721 )

[node name="Coin_Container" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Coin" parent="Coin_Container" instance=ExtResource( 7 )]
position = Vector2( 120, 160 )

[node name="Coin2" parent="Coin_Container" instance=ExtResource( 7 )]
position = Vector2( 1696, 360 )

[node name="Coin3" parent="Coin_Container" instance=ExtResource( 7 )]
position = Vector2( 580, 760 )

[node name="Attack_Container" type="Node2D" parent="."]

[node name="Portal_to_2" type="Area2D" parent="."]
position = Vector2( 1600, 225 )
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="Portal_to_2"]
texture = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Portal_to_2"]
polygon = PoolVector2Array( 14, -29.6, 14, -27.8, 21, -20.8, 21, -17, 22.9, 32, -21, 32, -18.9, -23, -16.9, -23, -10.9, -30, -8.4, -30, -5, -31.4, -5, -32, 2, -32 )

[node name="Foreground" type="TileMap" parent="."]
format = 1

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 2300
limit_bottom = 1040
script = ExtResource( 2 )

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="Collectable_Container" type="Node2D" parent="."]
script = ExtResource( 5 )

[connection signal="body_entered" from="Portal_to_2" to="Portal_to_2" method="_on_Portal_entered"]
